feat: lesson 10 through 15

--- a/Week01/Lesson.html
+++ b/Week01/Lesson.html
@@ -6,27 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week One</title>
   </head>
+  <style>
+    body {
+      background-color: #f6f2fe;
+    }
+    h1 {
+      color: #885df1;
+      font-size: 48px;
+      text-decoration: underline;
+      font-weight: 100;
+      text-align: center;
+    }
+    h2 {
+      color: #272044;
+      text-align: center;
+    }
+    .coders {
+      color: blue;
+    }
+    .courses {
+      color: red;
+    }
+    .stories {
+      color: green;
+    }
+  </style>
   <body>
-    <style>
-        h1{
-            color: blue;
-            font-size: 48px;
-            text-decoration: underline;
-            font-weight: 100;
-        }
-    </style>
     <h1>She Codes</h1>
+    <h2>Coding Workshop</h2>
     <ul>
       <li>
-        <a href="https://www.shecodes.io/students" target="_blank">Coders</a>
+        <a
+          href="https://www.shecodes.io/students"
+          target="_blank"
+          class="coders"
+          >Coders</a
+        >
       </li>
       <li>
-        <a href="Courses to https://www.shecodes.io/workshops" target="_blank"
+        <a
+          href="Courses to https://www.shecodes.io/workshops"
+          target="_blank"
+          class="courses"
           >Courses</a
         >
       </li>
       <li>
-        <a href=" https://www.shecodes.io/stories " target="_blank">Stories</a>
+        <a
+          href=" https://www.shecodes.io/stories "
+          target="_blank"
+          class="stories"
+          >Stories</a
+        >
       </li>
     </ul>
     <hr />
