feat: lessons 15 to the end

--- a/Week01/Lesson.html
+++ b/Week01/Lesson.html
@@ -23,17 +23,58 @@
     }
     .coders {
       color: blue;
+      text-decoration: none;
     }
     .courses {
       color: red;
+      text-decoration: none;
     }
     .stories {
       color: green;
+      text-decoration: none;
+    }
+    .more {
+      text-align: center;
+    }
+    .image {
+      display: block;
+      margin: 0 auto;
+    }
+    .btn {
+      display: block;
+      margin: 0 auto;
+      padding: 10px;
+      border: 2px solid #272044;
+      border-radius: 25px;
+      box-shadow: 10px 5px 5px #272044;
+    }
+    a:hover {
+      color: #885df1;
+      text-decoration: wavy;
+    }
+    .btn:hover {
+      background-color: #272044;
+      box-shadow: 0 0 0;
+      color: #fff;
+      font-weight: 900;
+      cursor: pointer;
+    }
+    li {
+      list-style: none;
+    }
+    .contact-info{
+        display: block;
+        width: 50%;
+        margin: 2rem auto;
+    }
+    .colored{
+        color: #885df1;
     }
   </style>
   <body>
     <h1>She Codes</h1>
     <h2>Coding Workshop</h2>
+    <button class="btn">Apply now</button>
     <ul>
       <li>
         <a
@@ -61,10 +102,15 @@
       </li>
     </ul>
     <hr />
-    <p><b>More info</b></p>
+    <p class="more"><b>More info</b></p>
     <img
+      class="image"
       width="400px"
       src="https://media.istockphoto.com/photos/close-up-of-a-smart-young-woman-coding-picture-id1332378618?b=1&k=20&m=1332378618&s=170667a&w=0&h=wobDGfLkR3qAKWPidg-zth-A9ex4KCQQzzK_KXfAhxE="
     />
+    <div class="contact-info">
+      <span class="colored">Email:</span><span>hello@shecodes.io</span
+      ><span class="colored">Instagram</span><span>@shecodes.io</span>
+    </div>
   </body>
 </html>
