--- a/Week02/Challenges.html
+++ b/Week02/Challenges.html
@@ -9,13 +9,14 @@
   <body>
     <h2>Week 2</h2>
     <script>
-      let homeTown = prompt("Please enter  your hometown");
-      alert(homeTown);
+      let age = prompt("Please tell us how old you are ...");
 
-      let fName = promt("Please enter your first name");
-      let sName = promt("Please enter your second name");
-
-      alert(fName + " " + sName);
+      if(age < 18){
+          alert("Sorry you cannot apply");
+      }
+      else{
+          alert("You can apply to sheCodes")
+      }
     </script>
   </body>
 </html>
