--- a/Week02/Challenges.html
+++ b/Week02/Challenges.html
@@ -9,13 +9,16 @@
   <body>
     <h2>Week 2</h2>
     <script>
-      let age = prompt("Please tell us how old you are ...");
+      let hour = prompt("Entter current hour ...");
 
-      if(age < 18){
-          alert("Sorry you cannot apply");
-      }
-      else{
-          alert("You can apply to sheCodes")
+      if (hour < 12) {
+        alert("Good mornung");
+      } else {
+        if (hour > 18) {
+          alert("Good evening");
+        } else {
+          alert("Good afternoon");
+        }
       }
     </script>
   </body>
